# atm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: documentation.yml
docs/: Doxyfile
include/atm/: atm.hpp  bank_api.hpp  error_code.hpp
src/: atm.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  mock_bank_api.hpp  tests.cpp
